tests/idris2/error/perror021/expected
1/1: Building Implicit (Implicit.idr)
Error: Not the end of a block entry, check indentation.

Implicit:6:13--6:14
 2 | 
 3 | myReverse : Vect n el -> Vect n el
 4 | myReverse [] = []
 5 | myReverse {n = S k} (x :: xs) =
 6 |     replace {p=\n => Vect n el} (plusCommutative k 1) (myReverse xs ++ [x])
                 ^

